infrastructure/gitops/argocd/resources/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - name: gateway-internal
      namespace: networking
      sectionName: https
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - argocd.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          weight: 1
          group: ''
          kind: Service
